--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -72,6 +72,12 @@ ul.social-media-links {
 header {
   @include clearfix;
 
+//  position: fixed;
+//  top: 0px;
+//  left: 0px;
+//  right: 0px;
+//  z-index: 10;
+
   .home-header-wrapper {
     max-width: $website-max-width;
     @include centred-margins;
@@ -143,6 +149,26 @@ header {
     }
   }
 }
+
+.headroom {
+  -webkit-transition: -webkit-transform 200ms linear;
+  transition: transform 200ms linear;
+}
+.headroom--pinned {
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+}
+.headroom--unpinned {
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+
+//.headroom--pinned {
+//  display: block;
+//}
+//.headroom--unpinned {
+//  display: none;
+//}
 
 // MAIN
 
