--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -534,10 +534,40 @@ h2 {
   border-bottom: 1px solid lighten($dark-background-colour, 30);
 }
 
-.copyright-wrapper p {
+.copyright-wrapper {
+  margin-bottom: 0px;
+}
+
+.copyright {
   @include tiny-text;
+  color: lighten($dark-background-colour, 35);
+  text-align: center;
+}
+
+.legal {
+  font-size: 8px;
+  line-height: 10px;
   color: lighten($dark-background-colour, 25);
   text-align: center;
+  max-width: 308px;
+  @include centred-margins;
+  margin-bottom: 5px;
+
+  @include mq($from: mobile-landscape) {
+    margin-top: 32px;
+    max-width: 450px;
+    width: 450px;
+  }
+
+  @include mq($from: tablet) {
+    position: absolute;
+    left: 0px;
+    bottom: 14px;
+    margin-left: 30px;
+    max-width: 450px;
+    width: 450px;
+    text-align: left;
+  }
 }
 
 .spinner {
