various enhancements including cat_id on going to app page, google analytics and gui tweaks

--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -917,6 +917,9 @@ h2 {
 
   .app-categories {
     li {
+      @include clearfix;
+      margin-bottom: 5px;
+
       .position {
         float: left;
         display: inline-block;
