added instrucitions to home page

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -46,6 +46,8 @@ $e-mail-icon: "^";
 $address-icon: "~";
 $telephone-icon: "|";
 $fancy-right-icon: "_";
+$flourish-left: "1";
+$flourish-right: "2";
 
 // Not currently in use
 //@import "modules/retina";
