--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -1212,3 +1212,94 @@ h2 {
     margin-bottom: 6px;
   }
 }
+
+#home-page {
+  .instructions {
+    max-width: 700px;
+    @include centred-margins;
+    margin-top: 100px;
+    padding-bottom: 50px;
+    @include clearfix;
+
+    @include mq($to: mobile-landscape) {
+      padding-bottom: 24px;
+    }
+
+    .instruction {
+      float: left;
+      width: 33%;
+      padding: 0px 12px;
+
+      @include mq($to: mobile-landscape) {
+        float: none;
+        display: block;
+        width: 350px;
+        @include centred-margins;
+        margin-bottom: 30px;
+      }
+
+      @include mq($to: mobile-landscape) {
+        width: 300px;
+      }
+
+      .img-wrapper {
+        @include centred-margins;
+        width: 160px;
+        margin-bottom: 24px;
+
+        @include mq($to: tablet) {
+          margin-bottom: 24px;
+        }
+
+        .img {
+          width: 160px;
+          height: 160px;
+          @include border-top-radius(79.9px);
+          @include border-bottom-radius(79.9px);
+          background-size: 200px 200px;
+
+          //@include app-icon-shadow;
+          //@include border-top-radius(30px);
+          //@include border-bottom-radius(30px);
+          //border: 1px solid $main-spot-colour;
+
+          -webkit-box-shadow: inset 0 0 10px #555;
+          -moz-box-shadow: inset 0 0 10px #555;
+          box-shadow: inset 0 0 10px #555;
+        }
+
+        .img.one {
+          background-image: url(/images/category-search-results-@2x.jpg);
+        }
+
+        .img.two {
+          background-image: url(/images/category-@2x.jpg);
+        }
+
+        .img.three {
+          background-image: url(/images/app-categories-@2x.jpg);
+        }
+      }
+
+      p {
+        @include body-text;
+        text-align: center;
+        font-style: italic;
+        color: #555;
+        padding: 12px;
+
+        span {
+          font-weight: bold;
+        }
+      }
+
+      .flourish {
+        line-height: 1px;
+        height: 1px;
+        width: 120px;
+        border-top: 1px solid $main-spot-colour;
+        @include centred-margins;
+      }
+    }
+  }
+}
