--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -40,23 +40,26 @@ footer {
 
 // Sticky footer adjustment
 #home-page {
-  padding-top: 50px;
-  padding-bottom: 150px;
+  padding-top: 30px;
+
+  @include mq($to: mobile-landscape) {
+    padding-top: 60px;
+  }
 }
 
-#home-page.extended {
-  padding-bottom: 225px;
-}
-
-#home-page.extended-add {
-  -webkit-transition: 1s linear all; /* Chrome */
-  transition: 5s linear all;
-  padding-bottom: 150px;
-}
-
-#home-page.extended-add-active {
-  padding-bottom: 225px;
-}
+//#home-page.extended {
+//  padding-bottom: 225px;
+//}
+//
+//#home-page.extended-add {
+//  -webkit-transition: 1s linear all; /* Chrome */
+//  transition: 5s linear all;
+//  padding-bottom: 150px;
+//}
+//
+//#home-page.extended-add-active {
+//  padding-bottom: 225px;
+//}
 
 // HEADER LAYOUT
 
