--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -72,21 +72,8 @@ a.basic-button {
 .akin-logo-link {
   display: inline-block;
   vertical-align: middle;
+  line-height: 19px;
 }
-
-// AUTOCOMPLETE CLEAR BUTTON
-
-//.search-input-wrapper {
-//  a {
-//    font-size: 16px !important;
-//    color: lighten($alt-black-colour, 10);
-//  }
-//
-//  a.clear-search:active {
-//    //color: black;
-//    //background-color: lighten($alt-black-colour, 20);
-//  }
-//}
 
 // CALL TO ACTION
 
